One unit test fix and formatting